kubernetes/apps/komga/komga-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
  namespace: default
  annotations:
    metallb.io/loadBalancerIPs: 192.168.1.54
spec:
  selector:
    app: komga
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 25600
